add notifications service -2

--- a/apps/notifications/.env
+++ b/apps/notifications/.env
@@ -1,1 +1,6 @@
 PORT=3004
+
+GOOGLE_OAUTH_CLIENT_ID=332918952485-cnt5v2gfvt2v3vpm1rd3dgh0uiqkm1gr.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET=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
+GOOGLE_OAUTH_REFRESH_TOKEN=1//043Z-C_dOGIsICgYIARAAGAQSNwF-L9IrjJTO768HwKr8CMCHo9KBFt7B0fwrhBHnCXkXRBPB_FzbXbocT2xLJX3u-1XlgTQgR_g
+SMTP_USER=sleeprnest@gmail.com
